bugfix on iphone5

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -654,7 +654,7 @@ footer {
     }
     p {
       font-size: 20px;
-      width: 500px;
+      width: 300px;
     }
   }
 }
